Programming Exercises: Fix arch tests