@@ -16,9 +16,9 @@ import de.tum.cit.aet.artemis.exercise.service.ExerciseDateService;
 import de.tum.cit.aet.artemis.programming.domain.ProgrammingExerciseParticipation;
 import de.tum.cit.aet.artemis.programming.domain.SolutionProgrammingExerciseParticipation;
 import de.tum.cit.aet.artemis.programming.domain.TemplateProgrammingExerciseParticipation;
-import de.tum.cit.aet.artemis.programming.dto.BuildPhase;
-import de.tum.cit.aet.artemis.programming.dto.BuildPhaseCondition;
-import de.tum.cit.aet.artemis.programming.dto.BuildPlanPhases;
+import de.tum.cit.aet.artemis.programming.dto.BuildPhaseDTO;
+import de.tum.cit.aet.artemis.programming.dto.BuildPhaseConditionDTO;
+import de.tum.cit.aet.artemis.programming.dto.BuildPlanPhasesDTO;
 
 @ExtendWith(MockitoExtension.class)
 class BuildPhaseEvaluationServiceTest {
@@ -38,9 +38,9 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testAllAlwaysPhases_allActive() {
-        BuildPhase compile = new BuildPhase("compile", "mvn compile", BuildPhaseCondition.ALWAYS, null);
-        BuildPhase test = new BuildPhase("test", "mvn test", BuildPhaseCondition.ALWAYS, List.of("target/surefire-reports/*.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile, test), "ubuntu:latest");
+        BuildPhaseDTO compile = new BuildPhaseDTO("compile", "mvn compile", BuildPhaseConditionDTO.ALWAYS, null);
+        BuildPhaseDTO test = new BuildPhaseDTO("test", "mvn test", BuildPhaseConditionDTO.ALWAYS, List.of("target/surefire-reports/*.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile, test), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(false);
 
@@ -53,9 +53,9 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testAfterDueDatePhases_beforeDueDate_onlyAlwaysActive() {
-        BuildPhase compile = new BuildPhase("compile", "mvn compile", BuildPhaseCondition.ALWAYS, null);
-        BuildPhase test = new BuildPhase("test", "mvn test", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile, test), "ubuntu:latest");
+        BuildPhaseDTO compile = new BuildPhaseDTO("compile", "mvn compile", BuildPhaseConditionDTO.ALWAYS, null);
+        BuildPhaseDTO test = new BuildPhaseDTO("test", "mvn test", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile, test), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(false);
 
@@ -68,9 +68,9 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testAfterDueDatePhases_afterDueDate_allActive() {
-        BuildPhase compile = new BuildPhase("compile", "mvn compile", BuildPhaseCondition.ALWAYS, null);
-        BuildPhase test = new BuildPhase("test", "mvn test", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile, test), "ubuntu:latest");
+        BuildPhaseDTO compile = new BuildPhaseDTO("compile", "mvn compile", BuildPhaseConditionDTO.ALWAYS, null);
+        BuildPhaseDTO test = new BuildPhaseDTO("test", "mvn test", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile, test), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(true);
 
@@ -83,7 +83,7 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testNoPhases_emptyResult() {
-        BuildPlanPhases phases = new BuildPlanPhases(Collections.emptyList(), "ubuntu:latest");
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(Collections.emptyList(), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(false);
 
@@ -95,9 +95,9 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testMultipleAfterDueDatePhases_beforeDueDate_noneActive() {
-        BuildPhase test1 = new BuildPhase("test1", "mvn test -pl module1", BuildPhaseCondition.AFTER_DUE_DATE, List.of("module1/target/*.xml"));
-        BuildPhase test2 = new BuildPhase("test2", "mvn test -pl module2", BuildPhaseCondition.AFTER_DUE_DATE, List.of("module2/target/*.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(test1, test2), "ubuntu:latest");
+        BuildPhaseDTO test1 = new BuildPhaseDTO("test1", "mvn test -pl module1", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("module1/target/*.xml"));
+        BuildPhaseDTO test2 = new BuildPhaseDTO("test2", "mvn test -pl module2", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("module2/target/*.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(test1, test2), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(false);
 
@@ -109,9 +109,9 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testMultipleAfterDueDatePhases_afterDueDate_allActive() {
-        BuildPhase test1 = new BuildPhase("test1", "mvn test -pl module1", BuildPhaseCondition.AFTER_DUE_DATE, List.of("module1/target/*.xml"));
-        BuildPhase test2 = new BuildPhase("test2", "mvn test -pl module2", BuildPhaseCondition.AFTER_DUE_DATE, List.of("module2/target/*.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(test1, test2), "ubuntu:latest");
+        BuildPhaseDTO test1 = new BuildPhaseDTO("test1", "mvn test -pl module1", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("module1/target/*.xml"));
+        BuildPhaseDTO test2 = new BuildPhaseDTO("test2", "mvn test -pl module2", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("module2/target/*.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(test1, test2), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(true);
 
@@ -124,9 +124,9 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testResultPathsAggregatedFromMultiplePhases() {
-        BuildPhase compile = new BuildPhase("compile", "mvn compile", BuildPhaseCondition.ALWAYS, List.of("compile-results/*.xml"));
-        BuildPhase test = new BuildPhase("test", "mvn test", BuildPhaseCondition.ALWAYS, List.of("test-results/*.xml", "integration/*.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile, test), "ubuntu:latest");
+        BuildPhaseDTO compile = new BuildPhaseDTO("compile", "mvn compile", BuildPhaseConditionDTO.ALWAYS, List.of("compile-results/*.xml"));
+        BuildPhaseDTO test = new BuildPhaseDTO("test", "mvn test", BuildPhaseConditionDTO.ALWAYS, List.of("test-results/*.xml", "integration/*.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile, test), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(false);
 
@@ -138,8 +138,8 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testPhaseWithNullResultPaths_noTestsExpected() {
-        BuildPhase compile = new BuildPhase("compile", "mvn compile", BuildPhaseCondition.ALWAYS, null);
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile), "ubuntu:latest");
+        BuildPhaseDTO compile = new BuildPhaseDTO("compile", "mvn compile", BuildPhaseConditionDTO.ALWAYS, null);
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(false);
 
@@ -152,8 +152,8 @@ class BuildPhaseEvaluationServiceTest {
 
     @Test
     void testPhaseWithEmptyResultPaths_noTestsExpected() {
-        BuildPhase compile = new BuildPhase("compile", "mvn compile", BuildPhaseCondition.ALWAYS, Collections.emptyList());
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile), "ubuntu:latest");
+        BuildPhaseDTO compile = new BuildPhaseDTO("compile", "mvn compile", BuildPhaseConditionDTO.ALWAYS, Collections.emptyList());
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile), "ubuntu:latest");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(false);
 
@@ -166,10 +166,10 @@ class BuildPhaseEvaluationServiceTest {
     @Test
     void testTypicalSetup_compileAlways_testAfterDueDate_beforeDueDate() {
         // Typical configuration: compile phase always runs, test phase only after due date
-        BuildPhase compile = new BuildPhase("Compile", "mvn clean compile", BuildPhaseCondition.ALWAYS, null);
-        BuildPhase test = new BuildPhase("Test", "mvn test", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
-        BuildPhase sca = new BuildPhase("Static Analysis", "mvn checkstyle:checkstyle", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/checkstyle-result.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile, test, sca), "maven:3.9-eclipse-temurin-21");
+        BuildPhaseDTO compile = new BuildPhaseDTO("Compile", "mvn clean compile", BuildPhaseConditionDTO.ALWAYS, null);
+        BuildPhaseDTO test = new BuildPhaseDTO("Test", "mvn test", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
+        BuildPhaseDTO sca = new BuildPhaseDTO("Static Analysis", "mvn checkstyle:checkstyle", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/checkstyle-result.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile, test, sca), "maven:3.9-eclipse-temurin-21");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(false);
 
@@ -184,10 +184,10 @@ class BuildPhaseEvaluationServiceTest {
     @Test
     void testTypicalSetup_compileAlways_testAfterDueDate_afterDueDate() {
         // Same configuration, but after due date
-        BuildPhase compile = new BuildPhase("Compile", "mvn clean compile", BuildPhaseCondition.ALWAYS, null);
-        BuildPhase test = new BuildPhase("Test", "mvn test", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
-        BuildPhase sca = new BuildPhase("Static Analysis", "mvn checkstyle:checkstyle", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/checkstyle-result.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile, test, sca), "maven:3.9-eclipse-temurin-21");
+        BuildPhaseDTO compile = new BuildPhaseDTO("Compile", "mvn clean compile", BuildPhaseConditionDTO.ALWAYS, null);
+        BuildPhaseDTO test = new BuildPhaseDTO("Test", "mvn test", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
+        BuildPhaseDTO sca = new BuildPhaseDTO("Static Analysis", "mvn checkstyle:checkstyle", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/checkstyle-result.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile, test, sca), "maven:3.9-eclipse-temurin-21");
 
         when(exerciseDateService.isAfterDueDate(participation)).thenReturn(true);
 
@@ -205,9 +205,9 @@ class BuildPhaseEvaluationServiceTest {
     void testTemplateParticipation_beforeDueDate_allPhasesActive() {
         // Template participations should always run all phases so instructors get full feedback
         TemplateProgrammingExerciseParticipation templateParticipation = new TemplateProgrammingExerciseParticipation();
-        BuildPhase compile = new BuildPhase("Compile", "mvn compile", BuildPhaseCondition.ALWAYS, null);
-        BuildPhase test = new BuildPhase("Test", "mvn test", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile, test), "ubuntu:latest");
+        BuildPhaseDTO compile = new BuildPhaseDTO("Compile", "mvn compile", BuildPhaseConditionDTO.ALWAYS, null);
+        BuildPhaseDTO test = new BuildPhaseDTO("Test", "mvn test", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile, test), "ubuntu:latest");
 
         // ExerciseDateService should not even be consulted for template participations
         BuildPhaseEvaluationService.EvaluatedBuildPlan result = buildPhaseEvaluationService.evaluate(phases, templateParticipation);
@@ -223,10 +223,10 @@ class BuildPhaseEvaluationServiceTest {
     void testSolutionParticipation_beforeDueDate_allPhasesActive() {
         // Solution participations should always run all phases so instructors get full feedback
         SolutionProgrammingExerciseParticipation solutionParticipation = new SolutionProgrammingExerciseParticipation();
-        BuildPhase compile = new BuildPhase("Compile", "mvn compile", BuildPhaseCondition.ALWAYS, null);
-        BuildPhase test = new BuildPhase("Test", "mvn test", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
-        BuildPhase sca = new BuildPhase("SCA", "mvn checkstyle:checkstyle", BuildPhaseCondition.AFTER_DUE_DATE, List.of("target/checkstyle-result.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(compile, test, sca), "ubuntu:latest");
+        BuildPhaseDTO compile = new BuildPhaseDTO("Compile", "mvn compile", BuildPhaseConditionDTO.ALWAYS, null);
+        BuildPhaseDTO test = new BuildPhaseDTO("Test", "mvn test", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/surefire-reports/*.xml"));
+        BuildPhaseDTO sca = new BuildPhaseDTO("SCA", "mvn checkstyle:checkstyle", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("target/checkstyle-result.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(compile, test, sca), "ubuntu:latest");
 
         // ExerciseDateService should not even be consulted for solution participations
         BuildPhaseEvaluationService.EvaluatedBuildPlan result = buildPhaseEvaluationService.evaluate(phases, solutionParticipation);
@@ -240,9 +240,9 @@ class BuildPhaseEvaluationServiceTest {
     void testTemplateParticipation_allAfterDueDatePhases_allActive() {
         // Even if all phases are AFTER_DUE_DATE, template participation should still run them all
         TemplateProgrammingExerciseParticipation templateParticipation = new TemplateProgrammingExerciseParticipation();
-        BuildPhase test1 = new BuildPhase("test1", "mvn test -pl module1", BuildPhaseCondition.AFTER_DUE_DATE, List.of("module1/*.xml"));
-        BuildPhase test2 = new BuildPhase("test2", "mvn test -pl module2", BuildPhaseCondition.AFTER_DUE_DATE, List.of("module2/*.xml"));
-        BuildPlanPhases phases = new BuildPlanPhases(List.of(test1, test2), "ubuntu:latest");
+        BuildPhaseDTO test1 = new BuildPhaseDTO("test1", "mvn test -pl module1", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("module1/*.xml"));
+        BuildPhaseDTO test2 = new BuildPhaseDTO("test2", "mvn test -pl module2", BuildPhaseConditionDTO.AFTER_DUE_DATE, List.of("module2/*.xml"));
+        BuildPlanPhasesDTO phases = new BuildPlanPhasesDTO(List.of(test1, test2), "ubuntu:latest");
 
         BuildPhaseEvaluationService.EvaluatedBuildPlan result = buildPhaseEvaluationService.evaluate(phases, templateParticipation);
 
